<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <!-- Lista co todos os carros -->
        <item
            android:id="@+id/nav_item_carros_todos"
            android:checked="true"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/carros"></item>

        <!-- Lista com os Carros Clássicos -->
        <item
            android:id="@+id/nav_item_carros_classicos"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/classicos"></item>

        <!-- Lista com os Carros Esportivos -->
        <item
            android:id="@+id/nav_item_carros_esportivos"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/esportivos"></item>

        <!-- Lista com os Carros Luxuosos -->
        <item
            android:id="@+id/nav_item_carros_luxuosos"
            android:icon="@drawable/ic_drawer_carro"
            android:title="@string/luxo"></item>

        <!-- WebView com Informações sobre o Livro -->
        <item
            android:id="@+id/nav_item_site_livro"
            android:icon="@drawable/ic_drawer_site_livro"
            android:title="@string/site_do_livro"></item>

        <!-- Tela de Configurações -->
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/configuracoes"></item>

        <!-- Câmera -->
        <item
            android:id="@+id/nav_item_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="Câmera" />

    </group>
</menu>